--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,32 @@
 .App {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 100px 200px 300px;
-  padding: 50px 100px;
+  grid-template-columns: 300px;
+  grid-template-rows: 1fr 960px;
+  padding: 0px 0px;
   font-family: sans-serif;
   font-size: 20px;
   font-weight: bold;
-  column-gap: 10px;
-  row-gap: 20px;
+  column-gap: 0px;
+  row-gap: 0px;
 
 }
 
 .App-header {
+  color: hsl(0, 0%, 0%);
   background-color: bisque;
-  padding: 20px;
+  padding: 5px;
   grid-column-start: span 2;
 }
 
 .item {
   
-  border: 1px solid #000000;
-  background-color: #5e9a0a;
-  color: white;
+  border: 2px solid #000000;
+  background-color: hsl(85, 46%, 70%);
+  color: rgb(0, 0, 0);
   padding: 10px;
+  grid-row-start: span 2;
 }
 
-.App {
-  
+.threejs {
+  background-color: hsl(0, 0%, 91%);
 }
